--- a/base/service.yaml
+++ b/base/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello‑world
+  name: helloworld
   namespace: roboticsready
 spec:
   type: NodePort
   selector:
-    app: hello‑world
+    app: helloworld
   ports:
   - port: 80
     targetPort: 80
