--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -19,4 +19,4 @@ spec:
         image: busybox:1.35
         command: ["/bin/sh","-c"]
         args:
-        - while true; do echo "👋 Hello from Flux on Arc!" ; sleep 5; done
+        - while true; do echo "👋 Hello from Flux on Azure Arc!" ; sleep 5; done
